# groundguard

./: .coverage  .gitignore  CLAUDE.md  GROUNDGUARD_CONTRACT.md  README.md  advisory_log.md  progress.json  pyproject.toml
.github/workflows/: ci.yml  release.yml
agentic_verifier/: _constants.py  _log.py  exceptions.py
agentic_verifier/adapters/: __init__.py  registry.py
agentic_verifier/core/: classifier.py  verifier.py
agentic_verifier/integrations/: langchain.py
agentic_verifier/loaders/: chunker.py  helpers.py
agentic_verifier/models/: builder.py  internal.py  result.py  tier3.py
agentic_verifier/tiers/: tier1_authenticity.py  tier2_semantic.py  tier3_evaluation.py
benchmarks/: README.md  requirements.txt  run_benchmark.py
examples/: __init__.py  bedrock_rag.py  cohere_rag.py  full_output_verification.py  langchain_retrieval_qa.py  llamaindex_citation.py  openai_assistants.py
groundguard/: __init__.py  _constants.py  _log.py  circuit_breaker.py  cost_estimate.py  exceptions.py  profiles.py
groundguard/adapters/: __init__.py  registry.py
groundguard/core/: claim_extractor.py  classifier.py  result_builder.py  verifier.py
groundguard/integrations/: langchain.py
groundguard/loaders/: accumulator.py  chunker.py  helpers.py  legal.py  structured.py
groundguard/models/: builder.py  internal.py  result.py  tier3.py
groundguard/tiers/: tier1_authenticity.py  tier25_preprocessing.py  tier2_semantic.py  tier3_evaluation.py
plan/: tier25_spec.md
tests/: conftest.py  test_accumulator.py  test_adapters.py  test_batch.py  test_builder.py  test_chunker.py  test_circuit_breaker.py  test_claim_extractor.py  test_classifier.py  test_clause_preprocessor.py  test_cost_estimate.py  test_evaluation.py  test_examples.py  test_exceptions.py  test_exports.py  test_faithfulness.py  test_flattener.py  test_helpers.py  test_langchain.py  test_log.py  test_logging.py  test_models.py  test_models_v2.py  test_profiles.py  test_structured_loader.py  test_tier1.py  test_tier2.py  test_tier25.py  test_verifier.py  test_verify_analysis.py  test_verify_answer.py  test_verify_clause.py
tests/integration/: compat_models.py  test_compat_suite.py  test_deterministic.py  test_real_suite.py
